--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,17 +11,11 @@ services:
     env_file:
       - .env
     environment:
-      AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
-      AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
-      JWT_SECRET: ${JWT_SECRET}
-      KAKAO_CLIENT_ID: ${KAKAO_CLIENT_ID}
-      KAKAO_CLIENT_SECRET: ${KAKAO_CLIENT_SECRET}
-      MAIL_PASSWORD: ${MAIL_PASSWORD}
-      MAIL_USERNAME: ${MAIL_USERNAME}
-      PASSWORD: ${PASSWORD}
-      URL: ${URL}
-      OPEN_API_KEY: ${OPEN_API_KEY}
-      USERNAME: ${USERNAME}
+      JWT_SECRET: "${JWT_SECRET}"
+      KAKAO_CLIENT_ID: "${Client_ID}"
+      PASSWORD: "${PASSWORD}"
+      URL: "${URL}"
+      USERNAME: "${USERNAME}"
 
   nginx:
     container_name: nginx
