--- a/.gitignore
+++ b/.gitignore
@@ -29,9 +29,12 @@ build/
 
 # IntelliJ IDEA
 .idea/
-*.iml
 *.iws
+*.iml
+*.ipr
 out/
+!**/src/main/**/out/
+!**/src/test/**/out/
 
 # VS Code
 .vscode/
