--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,10 @@ dependencies {
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+	//openai
+	implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+	implementation 'org.json:json:20240303'
 }
 
 tasks.named('test') {
