feat: 음식 영양 분석 결과 저장 기능 구현(#11)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,8 +17,8 @@ spring:
         force: true
   jackson:
     time-zone: Asia/Seoul
-#  config:
-#    import: optional:file:.env[.properties]
+  config:
+    import: optional:file:.env[.properties]
   datasource:
     url: ${URL}
     username: ${USERNAME}
