Fix: redis host 컨테이너로 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -65,8 +65,8 @@ spring:
       enabled: true
   data:
     redis:
-      #host: redis-container
-      host: localhost
+      host: redis-container
+      #host: localhost
       port: 6379
   # 사진 최대 업로드 크기 늘리기
   servlet:
